--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity"
->
-
-    <include layout="@layout/text_view" android:id="@+id/include"/>
+        android:id="@+id/topView">
 
 
+    <View
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/vHome" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    <include layout="@layout/input_view" android:id="@+id/include"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
