WA-4-adding-working-app-poc

--- a/app/src/main/res/drawable/gradient_background_day.xml
+++ b/app/src/main/res/drawable/gradient_background_day.xml
@@ -4,7 +4,7 @@
         <shape>
             <gradient android:angle="90"
                       android:endColor="#FFA164"
-                      android:startColor="#FFFF00"
+                      android:startColor="#FFDA00"
                       android:type="linear" />
         </shape>
     </item>
