--- a/app/src/main/res/layout/input_view.xml
+++ b/app/src/main/res/layout/input_view.xml
@@ -63,6 +63,8 @@
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginBottom="264dp" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"/>
+
+
     <TextView
             android:textSize="40sp"
             android:layout_width="wrap_content"
@@ -89,6 +91,8 @@
             android:textSize="32sp"
             android:fontFamily="sans-serif"
             android:layout_width="wrap_content"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             android:layout_height="wrap_content" android:id="@+id/tvCurrentDescription"
             app:layout_constraintTop_toBottomOf="@+id/view"
             app:layout_constraintBottom_toBottomOf="@+id/vCurrentDescription"
