--- a/app/src/main/res/layout/input_view.xml
+++ b/app/src/main/res/layout/input_view.xml
@@ -5,6 +5,13 @@
                                                    android:layout_height="match_parent">
 
     <View
+            android:layout_width="wrap_content"
+            android:layout_height="80dp" android:id="@+id/vDaily2"
+            app:layout_constraintTop_toBottomOf="@+id/tvCurrentDescription"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="24dp" android:layout_marginBottom="29dp"
+            app:layout_constraintBottom_toTopOf="@+id/vDaily"/>
+    <View
             android:layout_height="100dp" android:id="@+id/vInput" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
             android:layout_width="match_parent" app:layout_constraintHorizontal_bias="0.0"/>
@@ -57,14 +64,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/vLocation" android:layout_marginTop="48dp"
             android:layout_marginStart="160dp"/>
+
+
     <View
             android:layout_width="wrap_content"
             android:layout_height="200dp" android:id="@+id/view"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="264dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"/>
-
-
+            android:layout_marginBottom="296dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"/>
     <TextView
             android:textSize="40sp"
             android:layout_width="wrap_content"
@@ -84,11 +91,11 @@
             android:layout_marginTop="12dp" android:layout_marginStart="16dp"/>
     <View
             android:layout_width="wrap_content"
-            android:layout_height="75dp" android:id="@+id/vCurrentDescription"
+            android:layout_height="60dp" android:id="@+id/vCurrentDescription"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginBottom="188dp"/>
+            android:layout_marginBottom="236dp"/>
     <TextView
-            android:textSize="25sp"
+            android:textSize="20sp"
             android:fontFamily="sans-serif"
             android:layout_width="wrap_content"
             android:paddingLeft="20dp"
@@ -102,15 +109,72 @@
     <View
             android:layout_width="wrap_content"
             android:layout_height="80dp" android:id="@+id/vDaily"
-            app:layout_constraintTop_toBottomOf="@+id/vCurrentDescription"
+            app:layout_constraintTop_toBottomOf="@+id/tvCurrentDescription"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.34" app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintVertical_bias="0.85" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="43dp"/>
     <TextView
             android:layout_width="40dp"
             android:layout_height="23dp" android:id="@+id/tvDaily1Day"
             android:textSize="20sp"
             app:layout_constraintTop_toTopOf="@+id/vDaily" app:layout_constraintStart_toStartOf="@id/vDaily"
-            android:layout_marginTop="16dp" android:layout_marginStart="68dp"/>
+            android:layout_marginTop="16dp" android:layout_marginStart="56dp"/>
+    <TextView
+            android:layout_width="40dp"
+            android:layout_height="23dp" android:id="@+id/tvHour1"
+            android:textSize="13sp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="4dp" app:layout_constraintBottom_toBottomOf="@+id/vDaily2"
+            android:layout_marginBottom="40dp"/>
+    <TextView
+            android:layout_width="40dp"
+            android:layout_height="23dp" android:id="@+id/tvHour3"
+            android:textSize="13sp"
+            android:layout_marginStart="32dp"
+            app:layout_constraintStart_toEndOf="@+id/ivHour2" app:layout_constraintTop_toTopOf="@+id/vDaily2"
+            android:layout_marginTop="16dp"/>
+    <TextView
+            android:layout_width="40dp"
+            android:layout_height="23dp" android:id="@+id/tvHour4"
+            android:textSize="13sp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintStart_toEndOf="@+id/ivHour3"
+            app:layout_constraintTop_toTopOf="@+id/vDaily2" android:layout_marginTop="16dp"/>
+    <TextView
+            android:layout_width="40dp"
+            android:layout_height="23dp" android:id="@+id/tvHour3Temp"
+            android:textSize="15sp"
+            android:layout_marginStart="32dp"
+            app:layout_constraintStart_toEndOf="@+id/ivHour2" app:layout_constraintBottom_toBottomOf="@+id/vDaily2"
+            android:layout_marginBottom="16dp"/>
+    <TextView
+            android:layout_width="40dp"
+            android:layout_height="23dp" android:id="@+id/tvHour4Temp"
+            android:textSize="15sp"
+            android:layout_marginStart="16dp"
+            app:layout_constraintStart_toEndOf="@+id/ivHour3" app:layout_constraintBottom_toBottomOf="@+id/vDaily2"
+            android:layout_marginBottom="16dp"/>
+    <TextView
+            android:layout_width="40dp"
+            android:layout_height="23dp" android:id="@+id/tvHour2Temp"
+            android:textSize="15sp"
+            android:layout_marginStart="12dp"
+            app:layout_constraintStart_toEndOf="@+id/ivHour1" app:layout_constraintBottom_toBottomOf="@+id/vDaily2"
+            android:layout_marginBottom="16dp"/>
+    <TextView
+            android:layout_width="40dp"
+            android:layout_height="23dp" android:id="@+id/tvHour2"
+            android:textSize="13sp"
+            android:layout_marginStart="12dp"
+            app:layout_constraintStart_toEndOf="@+id/ivHour1" app:layout_constraintTop_toTopOf="@+id/vDaily2"
+            android:layout_marginTop="16dp"/>
+    <TextView
+            android:layout_width="40dp"
+            android:layout_height="23dp" android:id="@+id/tvHour1Temp"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="4dp" app:layout_constraintBottom_toBottomOf="@+id/vDaily2"
+            android:layout_marginBottom="16dp"/>
     <TextView
             android:layout_width="40dp"
             android:textSize="20sp"
@@ -135,7 +199,7 @@
             android:layout_width="40dp"
             android:textSize="15sp"
             android:layout_height="22dp" android:id="@+id/tvDaily1Temp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="68dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="56dp"
             app:layout_constraintTop_toTopOf="@+id/tvDaily1Day" android:layout_marginTop="24dp"/>
     <TextView
             android:layout_width="40dp"
@@ -149,6 +213,29 @@
             android:layout_height="39dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/ivDaily1"
             app:layout_constraintStart_toEndOf="@+id/tvDaily1Day" app:layout_constraintBottom_toBottomOf="@+id/vDaily"
             android:layout_marginStart="4dp" android:layout_marginBottom="24dp"/>
+    <ImageView
+            android:layout_width="45dp"
+            android:layout_height="39dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/ivHour1"
+            android:layout_marginStart="4dp"
+            app:layout_constraintStart_toEndOf="@+id/tvHour1" app:layout_constraintBottom_toBottomOf="@+id/vDaily2"
+            android:layout_marginBottom="24dp"/>
+    <ImageView
+            android:layout_width="45dp"
+            android:layout_height="39dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/ivHour3"
+            app:layout_constraintBottom_toBottomOf="@+id/vDaily2" android:layout_marginBottom="24dp"
+            app:layout_constraintStart_toEndOf="@+id/tvHour3"/>
+    <ImageView
+            android:layout_width="45dp"
+            android:layout_height="39dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/ivHour4"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintBottom_toBottomOf="@+id/vDaily2"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    <ImageView
+            android:layout_width="45dp"
+            android:layout_height="39dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/ivHour2"
+            app:layout_constraintStart_toEndOf="@+id/tvHour2Temp"
+            android:layout_marginStart="2dp" app:layout_constraintBottom_toBottomOf="@+id/vDaily2"
+            android:layout_marginBottom="24dp"/>
     <ImageView
             android:layout_width="45dp"
             android:layout_height="39dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/ivDaily2"
